--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="canonical" href="http://duit188.latex2html.org/">
-    <link rel="amphtml" href="amphtml"https://sikecil.sfo2.cdn.digitaloceanspaces.com/index.htmll">
+    <link rel="amphtml" href="https://sikecil.sfo2.cdn.digitaloceanspaces.com/index.htmll">
     <meta name="google-site-verification" content="FbFFkTRXgvjOpEQiX10-2BajUNZTkrzGcsPrxy9LoF0" />
 	<title>Duit188 : Sekali Duduk Harus Nyepin Di Duit88 Slot Agar Bisa Maxwin 2024 </title>
     <meta name="description" content="Duit188 Situs judi online terbaru terpercaya memiliki rtp dengan rate 99% ke akurat nya terdiri dari permainan yang sedang ramai seperti pragmatic play , pg soft , live casino dll dengan deposit di situs sini .">
